Changelog
=========


2014-06-28a : v0.8.3 'Cross on tabs !'
--------------------------------------

* each tab has its closing button 

* Ctrl-Z and Ctrl-Y works on Script Text aera


2014-06-26a : v0.8.2 'Getting to the point'
-------------------------------------------

* switch to no-autocommit mode by default to allow savepoints

* a 'legacy autocommit' Open Database option is added

* add an example of COMMIT and ROLLBACK, and an example of SAVEPOINTS


2014-06-25a : v0.8.1 'Attach them all !'
----------------------------------------

* support attachement of several databases with the same name


2014-06-21a : v0.8.0 'Mark the date !'
--------------------------------------

* recognize date formats in .csv importation


2014-06-19a : v0.7.2 'Remember me'
----------------------------------

* keep memory of last directory used


2014-06-17a : v0.7.1
--------------------

* improved publishing on Pypi (was tricky, especially the front page)


2014-06-15b : v0.7.0
--------------------

* create a github project 'sqlite_bro', from 'sqlite_py_manager' baresql example

* discover how to publish on Pypi (hard)



2014-06-14c : "It's a long way to temporary !"
----------------------------------------------

* works with  temporary tables



2014-06-10a : 'Sanitizer of Python (xkcd.com/327)'
--------------------------------------------------

* imported python functions must be validated



2014-06-09a : 'The magic 8th PEP'
---------------------------------

* PEP8 alignement


2014-06-07a : 'Yield me a token'
--------------------------------

* the pythonic way to generate tokens is 'Yield'


2014-06-04a : 'Log me out !'
----------------------------

* export SQL + SQL top result in a file in 1 click


2014-06-01a 'Commit and Rollback'
---------------------------------

* support COMMIT and ROLLBACK


2014-06-03a : 'See me now ?'
----------------------------

* character INCREASE icon, so the back of the class can see


2014-05-25a : 'sql everywhere'